--- a/RandomItemList/RandomItemList/RandomItemList.csproj
+++ b/RandomItemList/RandomItemList/RandomItemList.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>perspective-dice-six-faces-random_38559.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="perspective-dice-six-faces-random_38559.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
